--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 #root {
   height: 100%;
    
@@ -43,3 +44,39 @@ button:hover {
 .modal-container-mobile.svelte-baitaa {
   bottom: 15% !important;
 }
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+.loader_container{
+  width: 100vw;
+  height: 100vh;
+  z-index: 999999;
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+  background-color: #1d1c1dad;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 32px;
+}
+.line-1{
+  font-weight: 800;
+  font-style: italic;
+  color: #fffefe;
+  font-size: 32px;
+}
+
